--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsModule/Index.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsModule/Index.cshtml
@@ -9,83 +9,133 @@
     ViewData["PageSubtitle"] = "Modules";
 }
 
-<link href="/NetCoreCMS.Modules.Cms/css/page.css" rel="stylesheet" />
-<script src="/NetCoreCMS.Modules.Cms/js/manageModule.js"></script>
+@*<link href="/NetCoreCMS.Modules.Cms/css/page.css" rel="stylesheet" />
+<script src="/NetCoreCMS.Modules.Cms/js/manageModule.js"></script>*@
 
-<div class="row">
-    <div class="col-lg-12">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                @ViewData["PageSubtitle"]
-                <div class="pull-right"><a asp-controller="CmsTheme" asp-action="Install" class="btn btn-outline btn-primary btn-xs">Install</a></div> 
-            </div>
-            <div class="panel-body">
+<style>
+    .ModuleManage li.active a {
+        color: #fff !important;
+        background-color: #337ab7 !important;
+        border-color: #2e6da4 !important;
+    }
+</style>
 
-                @if (@TempData.Keys.Contains("ModuleSuccessMessage")) { 
-                    <div class="alert alert-success alert-dismissable">
-                        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
-                        @TempData["ModuleSuccessMessage"] - <a href="/Home/RestartHost">Restart Now</a> <a href="#" class="alert-link"></a>.
-                    </div>
-                }
-                <table id="pageListDt" class="table table-striped table-bordered" cellspacing="0" width="100%">
-                    <thead>
-                        <tr><th>Name</th><th>Description</th><th>Category</th><th>Dependency</th><th>NetCore Version</th><th>Create By</th><th>Status</th><th>Action</th></tr>
-                    </thead>
-                    <tbody>
-                        @foreach (var item in ViewBag.Modules)
+<div class="row ModuleManage">
+    <ul class="nav nav-tabs">
+        <li class="active">
+            <a href="#site" data-toggle="tab" aria-expanded="true"> Modules</a>
+        </li>
+        <li class="">
+            <a href="#download" data-toggle="tab"> Download</a>
+        </li>
+    </ul>
+    <div class="tab-content fullHeight widget-layout-container">
+        <div class="tab-pane active" id="site">
+            <div class="">
+                <div class="panel panel-default">
+                    @*<div class="panel-heading">
+                        @ViewData["PageSubtitle"]
+                        <div class="pull-right"><a asp-controller="CmsTheme" asp-action="Install" class="btn btn-outline btn-primary btn-xs">Install</a></div>
+                    </div>*@
+                    <div class="panel-body">
+
+                        @if (@TempData.Keys.Contains("ModuleSuccessMessage"))
                         {
-                            if (item.Path.Contains("\\Core\\") == true)
-                            {
-                                <tr style="background-color:#e0e0e0;">
-                                    <td>
-                                        @item.ModuleTitle
-                                        <p>
-                                            Version: @item.Version<br />
-                                            Author: @item.Author<br />
-                                            Website:@item.WebSite
-                                        </p>
-                                    </td>
-                                    <td>@item.Description</td>
-                                    <td>@item.Category</td>
-                                    <td>@item.Dependencies</td>
-                                    <td>@item.NetCoreCMSVersion</td>
-                                    <td>@item.CreateBy</td>
-                                    <td>@item.ModuleStatus</td>
-                                    <td>
-                                        @Html.Raw(NetCoreCMS.Modules.Cms.Lib.ModuleHelper.GetActionText(item))
-                                    </td>
-                                </tr>
-                            }
-                            else{
-                                <tr>
-                                    <td>
-                                        @item.ModuleTitle
-                                        <p>
-                                            Version: @item.Version<br/>
-                                            Author: @item.Author<br/>
-                                            Website:@item.WebSite
-                                        </p>
-                                    </td>
-                                    <td>@item.Description</td>
-                                    <td>@item.Category</td>
-                                    <td>@item.Dependencies</td>
-                                    <td>@item.NetCoreCMSVersion</td>
-                                    <td>@item.CreateBy</td>                                
-                                    <td>@item.ModuleStatus</td>
-                                    <td> 
-                                        @Html.Raw(NetCoreCMS.Modules.Cms.Lib.ModuleHelper.GetActionText(item))
-                                    </td>
-                                </tr>
-                            }
-                            
+                            <div class="alert alert-success alert-dismissable">
+                                <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+                                @TempData["ModuleSuccessMessage"] - <a href="/Home/RestartHost">Restart Now</a> <a href="#" class="alert-link"></a>.
+                            </div>
                         }
-                    </tbody>
-                </table>
+                        <table id="pageListDt" class="table table-striped table-bordered" cellspacing="0" width="100%">
+                            <thead>
+                                <tr><th>Name</th><th>Description</th><th>Category</th><th>Dependency</th><th>NetCore Version</th><th>Create By</th><th>Status</th><th>Action</th></tr>
+                            </thead>
+                            <tbody>
+                                @foreach (var item in ViewBag.Modules)
+                                {
+                                    if (item.Path.Contains("\\Core\\") == true)
+                                    {
+                                        <tr style="background-color:#e0e0e0;">
+                                            <td>
+                                                @item.ModuleTitle
+                                                <p>
+                                                    Version: @item.Version<br />
+                                                    Author: @item.Author<br />
+                                                    Website:@item.WebSite
+                                                </p>
+                                            </td>
+                                            <td>@item.Description</td>
+                                            <td>@item.Category</td>
+                                            <td>@item.Dependencies</td>
+                                            <td>@item.NetCoreCMSVersion</td>
+                                            <td>@item.CreateBy</td>
+                                            <td>@item.ModuleStatus</td>
+                                            <td>
+                                                @Html.Raw(NetCoreCMS.Modules.Cms.Lib.ModuleHelper.GetActionText(item))
+                                            </td>
+                                        </tr>
+                                    }
+                                    else
+                                    {
+                                        <tr>
+                                            <td>
+                                                @item.ModuleTitle
+                                                <p>
+                                                    Version: @item.Version<br />
+                                                    Author: @item.Author<br />
+                                                    Website:@item.WebSite
+                                                </p>
+                                            </td>
+                                            <td>@item.Description</td>
+                                            <td>@item.Category</td>
+                                            <td>@item.Dependencies</td>
+                                            <td>@item.NetCoreCMSVersion</td>
+                                            <td>@item.CreateBy</td>
+                                            <td>@item.ModuleStatus</td>
+                                            <td>
+                                                @Html.Raw(NetCoreCMS.Modules.Cms.Lib.ModuleHelper.GetActionText(item))
+                                            </td>
+                                        </tr>
+                                    }
 
+                                }
+                            </tbody>
+                        </table>
+
+                    </div>
+                    <!-- /.panel-body -->
+                </div>
+                <!-- /.panel -->
             </div>
-            <!-- /.panel-body -->
         </div>
-        <!-- /.panel -->
+        <div class="tab-pane active" id="download">
+            <div class="">
+                <div class="panel panel-default">
+                    <div class="panel-body" >
+                        @* 
+                            Ajax List show
+
+                            Already Installed
+                            Update
+                            Download
+                        *@
+                        <table id="moduleGalleryOnline" class="table table-striped table-bordered" cellspacing="0" width="100%">
+                            <thead>
+                                <tr>
+                                    <th>Module</th>
+                                    <th>Version</th>
+                                    <th>Category</th>
+                                    <th>Author</th>
+                                    <th>Action <input type='button' class='btn btn-success btn-xs btn-outline' value='Download' onclick='downloadModule("asd")' /> </th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
  
@@ -94,4 +144,78 @@
     <link href="~/lib/DataTables/jquery.dataTables.min.css" rel="stylesheet" />
     <script src="~/lib/DataTables/jquery.dataTables.min.js"></script>
     <script src="~/lib/DataTables/dataTables.bootstrap.min.js"></script>
+    <script>
+        Array.prototype.where = function (filter) {
+
+            var collection = this;
+
+            switch (typeof filter) {
+
+                case 'function':
+                    return $.grep(collection, filter);
+
+                case 'object':
+                    for (var property in filter) {
+                        if (!filter.hasOwnProperty(prop))
+                            continue; // ignore inherited properties
+
+                        collection = $.grep(collection, function (item) {
+                            return item[property] === filter[property];
+                        });
+                    }
+                    return collection.slice(0); // copy the array 
+                // (in case of empty object filter)
+
+                default:
+                    throw new TypeError('func must be either a' +
+                        'function or an object of properties and values to filter by');
+            }
+        };
+
+        $.ajax({
+            method: 'GET',
+            url: '/MatGalleryApi/Modules',
+            data: { key: "" },
+            success: function (rsp) {                
+                //console.log(rsp);
+                rsp.forEach(function (item, index) {
+                    //console.log(item);
+                    $('#moduleGalleryOnline').append(
+                        "<tr>" +
+                        "   <td><b>" + item.moduleTitle + "</b><br/>" + item.description + "</td>"+
+                        "   <td>" + item.version +"</td>"+
+                        "   <td>" + item.category +"</td>" +
+                        "   <td><a href='" + item.website +"' target='_blank'>" + item.author + "</td>" +
+                        "   <td>" + "" +"</td>" +
+                        "</tr >"
+                    );
+                });
+            },
+            error: function (rsp) {
+                //NccPageMask.HideLoadingMask();
+                NccGlobalAlert.ShowError("Error occoured. Please try again after refresh the page.");
+            }
+        });
+
+        function downloadModule(moduleId) {
+            NccPageMask.ShowLoadingMask();
+            $.ajax({
+                method: 'POST',
+                url: '/CmsModule/DownloadModule',
+                data: { moduleId: moduleId },
+                success: function (rsp) {
+                    NccPageMask.HideLoadingMask();
+                    console.log(rsp);
+                    NccGlobalAlert.ShowSuccess(rsp.message);
+                },
+                error: function (rsp) {
+                    NccPageMask.HideLoadingMask();
+                    NccGlobalAlert.ShowError("Error occoured. Please try again after refresh the page.");
+                }
+            });
+            NccGlobalAlert.ShowError(moduleId);
+            NccPageMask.HideLoadingMask();
+
+        }
+    </script>
 }
